--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nt.son.androidstudiotips" >
+    package="nt.son.androidstudiotips">
 
+    <!-- Required to display the user's location on the map -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- Permissions Required to Display a Map -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name=
+        "com.google.android.providers.gsf.permission.READ_GSERVICES"
+        />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +29,22 @@
         </activity>
         <activity
             android:name=".otto.OttoActivity"
-            android:label="@string/title_activity_otto" >
-        </activity>
+            android:label="@string/title_activity_otto" />
         <activity
             android:name=".weak_gc_asycn.WeakActivity"
-            android:label="@string/title_activity_weak" >
-        </activity>
+            android:label="@string/title_activity_weak" />
+        <activity
+            android:name=".location_map.HereMapActivity"
+            android:label="@string/title_activity_here_map"></activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
     </application>
 
 </manifest>
