--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nt.son.androidstudiotips">
+    package="nt.son.androidstudiotips" >
 
     <!-- Required to display the user's location on the map -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -8,19 +8,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name=
-        "com.google.android.providers.gsf.permission.READ_GSERVICES"
-        />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_key"/>
+
         <activity
             android:name=".main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.AppStyled" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,16 +42,26 @@
             android:label="@string/title_activity_weak" />
         <activity
             android:name=".location_map.HereMapActivity"
-            android:label="@string/title_activity_here_map"></activity>
+            android:label="@string/title_activity_here_map" />
+        <activity
+            android:name=".toolbar.ToolBarActivity"
+            android:label="@string/title_activity_tool_bar"
+            android:theme="@style/AppTheme.StyleToolBar" />
+        <activity
+            android:name=".facebook.Facebook4Activity"
+            android:label="@string/title_activity_facebook4" >
+        </activity>
 
+        <!--facebook 4-->
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
         <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
-
+            android:name="io.fabric.ApiKey"
+            android:value="2b611f34253db190e3dd338a5dbf7970c0dfceae" />
     </application>
 
 </manifest>
