--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
         transitive = true;
     }
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.facebook.fresco:fresco:0.5.2+'
 }
