--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_key"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_key" />
 
         <activity
             android:name=".main.MainActivity"
@@ -52,16 +54,23 @@
             android:label="@string/title_activity_facebook4" >
         </activity>
 
-        <!--facebook 4-->
+        <!-- facebook 4 -->
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="2b611f34253db190e3dd338a5dbf7970c0dfceae" />
+
+        <activity
+            android:name=".sliding_tabs.SlidingTabsActivity"
+            android:label="@string/title_activity_sliding_tabs"
+            android:theme="@style/mSliDing_tabs_theme">
+        </activity>
     </application>
 
 </manifest>
